--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.26.1",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.2"
     },
     "devDependencies": {
         "@babel/core": "^7.2.2",
@@ -24,6 +26,7 @@
         "mini-css-extract-plugin": "^2.6.0",
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
+        "sass-resources-loader": "^2.2.4",
         "style-loader": "^3.3.1",
         "webpack": "^5.70.0",
         "webpack-cli": "^4.9.2",
