--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@react-google-maps/api": "^2.7.0",
         "axios": "^0.26.1",
+        "dotenv": "^16.0.0",
+        "gsap": "^3.10.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.2"
