--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "gsap": "^3.10.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.2.2"
+        "react-router-dom": "^6.2.2",
+        "universal-cookie": "^4.0.4"
     },
     "devDependencies": {
         "@babel/core": "^7.2.2",
